--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,11 +5,20 @@
       <div class="col-lg-4 mx-auto">
         <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
         <div class="auto-form-wrapper">
-          <form action="#">
+
+          <form (ngSubmit)="onSubmit( form.value )"
+                #form="ngForm">
             <div class="form-group">
               <label class="label">Usuario</label>
               <div class="input-group">
-                <input type="email" class="form-control" placeholder="Email">
+
+                <input type="email"
+                       class="form-control"
+                       placeholder="Email"
+                       required
+                       ngModel
+                       name="email">
+
                 <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
@@ -20,7 +29,13 @@
             <div class="form-group">
               <label class="label">Contraseña</label>
               <div class="input-group">
-                <input type="password" class="form-control" placeholder="*********">
+                <input type="password"
+                       class="form-control"
+                       placeholder="*********"
+                       required
+                       ngModel
+                       name="password">
+
                 <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
@@ -29,7 +44,7 @@
               </div>
             </div>
             <div class="form-group">
-              <button class="btn btn-primary submit-btn btn-block">Login</button>
+              <button class="btn btn-primary submit-btn btn-block" [disabled]="form.invalid">Login</button>
             </div>
 
 
