--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -44,7 +44,17 @@
               </div>
             </div>
             <div class="form-group">
-              <button class="btn btn-primary submit-btn btn-block" [disabled]="form.invalid">Login</button>
+              <button class="btn btn-primary submit-btn btn-block"
+                      *ngIf="!load"
+                      [disabled]="form.invalid">Login</button>
+
+              <button  class="btn btn-primary submit-btn btn-block"
+                       *ngIf="load"
+                       [disabled]="true">
+                <i class="fa fa-spin fa-sync"></i>
+                Iniciando sesión...
+              </button>
+
             </div>
 
 
