--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -62,7 +62,14 @@
             </div>
 
             <div class="form-group">
-              <button class="btn btn-primary submit-btn btn-block" [disabled]="form.invalid">Crear cuenta</button>
+              <button *ngIf="!load"
+                      class="btn btn-primary submit-btn btn-block" [disabled]="form.invalid">Crear cuenta</button>
+              <button  class="btn btn-primary submit-btn btn-block"
+                       *ngIf="load"
+                       [disabled]="true">
+                <i class="fa fa-spin fa-sync"></i>
+                Creando usuario...
+              </button>
             </div>
             <div class="text-block text-center my-3">
               <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
