--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -44,19 +44,20 @@
           </div>
 
           <hr>
-          <button type="submit"
+          <button *ngIf="!cargando"
+                  type="submit"
                   [disabled]="forma.invalid"
                   class="btn btn-success mr-2">
             <i class="fa fa-save"></i>
             Agregar
           </button>
 
-          <!--
-            <button disabled class="btn btn-success mr-2">
+            <button *ngIf="cargando"
+                    disabled
+                    class="btn btn-success mr-2">
               <i class="fa fa-spin fa-sync"></i>
               Espere por favor...
             </button>
-          -->
 
           <button type="reset" class="btn btn-light">Cancelar</button>
 
