--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,11 +15,26 @@
           </thead>
 
           <tbody>
-          <tr>
-            <td>Descripción</td>
-            <td>Monto</td>
-            <td>Tipo</td>
-            <td>acciones</td>
+          <tr *ngFor="let item of listEntryAndEgress">
+            <td>{{ item.descripcion }}</td>
+            <td>{{ item.monto | currency}}</td>
+            <td>
+              <span [ngClass]="{
+              'text-success': item.tipo === 'ingreso',
+              'text-danger': item.tipo === 'egreso'
+              }">
+
+                {{item.tipo}}
+
+              </span>
+            </td>
+            <td>
+              <button (click)="delteItem( item )"
+                      class="btn btn-danger">
+                <i class="fa fa-trash"></i>
+                Borrar
+              </button>
+            </td>
           </tr>
           </tbody>
 
