* added pipe for order.

--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,7 +15,7 @@
           </thead>
 
           <tbody>
-          <tr *ngFor="let item of listEntryAndEgress">
+          <tr *ngFor="let item of listEntryAndEgress | ordenIngresoEgreso">
             <td>{{ item.descripcion }}</td>
             <td>{{ item.monto | currency}}</td>
             <td>
